# events

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.prod.yaml  docker-compose.yaml  docker-compose.yml  logging.yaml  pyproject.toml  requirements.txt  settings.example.yaml  settings.schema.yaml
.github/: dependabot.yaml  dependabot.yml
.github/workflows/: add-issues-to-project.yaml  bandit.yaml  build-docker.yaml  deploy-production.yaml  deploy-staging.yaml  deploy.yaml  pre-commit.yaml  pre-commit.yml  pytest.yaml  pytest.yml
.run/: Dev server.run.xml
alembic/: README  README.md  env.py  script.py.mako
alembic/versions/: 0f714fc8defc_init_alembic.py  2db361ce1d3d_add_color_for_linked_calendar.py  85bf4b0af84d_add_linked_calendars.py  _2024_02_10_23_52_upgrade_empty_to_head.py  _2024_02_13_03_10_user_schedule_access_key.py  _2024_02_13_05_37_music_room_sports_moodle_hidden.py  _2024_03_10_21_21_extract_predefined_data.py  _2024_09_13_16_39_moodle_authtoken.py  _2024_09_22_16_35_add_timezone_to_updated_at_and_created_.py  _2025_08_16_02_01_workshops_hide.py  _2026_02_12_00_14_allow_to_hide_room_bookings.py  a9f09ae0208d_add_constraint_for_linked_calendars.py
deploy/: Dockerfile  docker-entrypoint.sh
docs/: README.md
scripts/: alembic_auto_migrations.py  generate_settings_schema.py  migrate_users_from_account_to_events.py  migrate_users_from_events_to_accounts.py
src/: config.py  config_schema.py  constants.py  dev.py  exceptions.py  logging_.py  main.py  prepare.py  utils.py
src/api/: __main__.py  app.py  dependencies.py  docs.py  lifespan.py  routers.py
src/api/auth/: __init__.py  common.py  dependencies.py  dev.py  innopolis.py  jwt.py
src/api/event_groups/: __init__.py  routes.py
src/api/ics/: __init__.py  routes.py  utils.py
src/app/: config.py  dependencies.py  routers.py  schemas.py
src/auth/: routes.py
src/core/: schemas.py
src/database/: __init__.py
src/modules/: crud.py  inh_accounts_sdk.py  innohassle_accounts.py  ownership.py
src/repositories/: __init__.py  crud.py  dependencies.py  innohassle_accounts.py  ownership.py
src/routers/: routers.py
src/schemas/: Event.py  EventChain.py  EventGroup.py  Tag.py  User.py  UserGroup.py  __init__.py  _base.py  _mixins.py  event_chains.py  event_groups.py  events.py  linked.py  ownership.py  tags.py  user_groups.py  users.py  workshops.py
tests/: README.md  test_app_configuration.py
tests/app/: conftest.py  test_app_configuration.py  test_event_groups_routers.py  test_tags_routers.py
tests/misc/: test_locate_path.py  test_nonobvious_schemas.py
tests/repositories/: conftest.py  test_event_groups.py  test_events.py  test_integrations.py  test_ownership.py  test_tags.py  test_users.py  test_workshops.py
(+122 files in other folders)
