[project]
name = "events"
version = "0.1.0"
description = ""
authors = [{ name = "one-zero-eight" }]
urls = { homepage = "https://t.me/one_zero_eight" }
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
    "aiofiles>=25.1.0",
    "alembic>=1.13.3",
    "asyncpg>=0.30.0",
    "authlib>=1.6.5",
    "colorlog>=6.8.2",
    "cryptography>=46.0.2",
    "fastapi[all]>=0.115.0",
    "fastapi-swagger>=0.2.3",
    "gunicorn==23.0.0",
    "icalendar>=6.0.1",
    "pre-commit>=4.0.1",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "pydantic>=2.12.2",
    "python-multipart>=0.0.19",
    "pytz~=2024.2",
    "pyyaml>=6.0.1",
    "ruff>=0.7.4",
    "sqlalchemy[postgresql-asyncpg]>=2.0.44",
    "uvicorn>=0.32.0",
]

[tool.ruff]
line-length = 120
lint.extend-select = ["I", "UP", "PL"]
lint.extend-ignore = ["PLC0415", "PLR"]
target-version = "py313"
