[project]
name = "events"
version = "0.1.0"
description = ""
authors = [{ name = "one-zero-eight" }]
urls = { homepage = "https://t.me/one_zero_eight" }
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
    "aiofiles>=25.1.0",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "colorlog>=6.10.1",
    "cryptography>=48.0.0",
    "fastapi[all]>=0.136.1",
    "fastapi-swagger>=0.4.50",
    "gunicorn==26.0.0",
    "icalendar>=7.1.0",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "pydantic>=2.13.4",
    "python-multipart>=0.0.28",
    "pytz>=2026.2",
    "pyyaml>=6.0.3",
    "ruff>=0.15.13",
    "sqlalchemy[postgresql-asyncpg]>=2.0.49",
    "uvicorn>=0.47.0",
    "fastapi-derive-responses>=0.1.7",
    "prek>=0.4.0",
    "joserfc>=1.6.5",
]

[tool.ruff]
line-length = 120
lint.extend-select = ["I", "UP", "PL"]
lint.extend-ignore = ["PLC0415", "PLR"]
target-version = "py313"
